--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
        <nav>
             <a href="./index.html">WebStudio</a>
            <ul>
-                <li> <a href="#studio">Studio</a></li>
-                <li> <a href="#portfolio">Portfolio</a></li>
-                <li> <a href="#contacts">Contacts</a></li>
+                <li> <a href="#Studio">Studio</a></li>
+                <li> <a href="#Portfolio">Portfolio</a></li>
+                <li> <a href="#Contacts">Contacts</a></li>
             </ul>
         </nav>
 
@@ -66,25 +66,25 @@
                 <h2>Our Team</h2>
                    <ul>
                     <li>
-                        <img src="./images/img-one.jpg" alt="Mark Guerrero,Product Designer">
+                        <img src="./images/img-one.jpg" alt="Mark Guerrero,Product Designer" width="264">
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
 
                     <li>
-                        <img src="./images/img-two.jpg" alt="Tom Ford,Frontend Developer">
+                        <img src="./images/img-two.jpg" alt="Tom Ford,Frontend Developer" width="264">
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
 
                     <li>
-                        <img src="./images/img-three.jpg" alt="Camila Garcia,Marketing">
+                        <img src="./images/img-three.jpg" alt="Camila Garcia,Marketing" width="264">
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
 
                     <li>
-                        <img src="./images/img-four.jpg" alt="Daniel Wilson,UI Designer">
+                        <img src="./images/img-four.jpg" alt="Daniel Wilson,UI Designer" width="264">
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
